# rust_standard

./: .gitignore  Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
application/: Cargo.toml  build.rs
application/assets/openapi/: rapidoc-min.js
application/config/: application.yaml
application/src/: assets.rs  configs.rs  logging.rs  main.rs
application/src/controller/: mod.rs
application/src/controller/openapi/: mod.rs
application/src/controller/web/: mod.rs  user_api.rs
application/src/core/: errors.rs  mod.rs  opentelemetry.rs  shutdown.rs  version.rs
application/src/core/context/: mod.rs
application/src/core/rapidoc/: mod.rs
application/src/core/salvo/: api_result.rs  context_inject.rs  error_handler.rs  logger.rs  mod.rs
application/src/service/: user_service.rs
common/: Cargo.toml  build.rs
common/proto/: cluster_data.proto
common/src/: env.rs  errors.rs  lib.rs
common/src/domain/model/user/: role.rs  user.rs  user_role.rs
common/src/domain/user/: mod.rs  user.rs  user_role.rs
common/src/email/: mod.rs
common/src/migration/: m20220120_000001_create_user_table.rs  mod.rs
common/src/queue/: broadcast.rs  cluster_event.rs  mod.rs
common/src/queue/message/: data.rs
docs/jaeger/: docker-compose.yml
docs/jaeger/config/: otel-collector-config-connector.yml
engine/: Cargo.toml
macros/: Cargo.toml
queue/: Cargo.toml  build.rs
queue/proto/: cluster_event.proto
queue/src/: broadcast.rs  cluster_event.rs  errors.rs  lib.rs
queue/src/message/: event.rs  mod.rs
