[workspace]
resolver = "2"
members = [
    "application",
    "common",
    "engine",
    "macros"
]
[workspace.package]
version = "0.1.0"
edition = "2021"
description = "template"

[workspace.dependencies]
common = { version = "0.1.0", path = "common" }
macros = { version = "0.1.0", path = "macros" }

config = "0.15.4"
num_cpus = "1"
thiserror = "2.0.9"
rust-embed = "8.5.0"
lazy_static = "1.5"
uuid = { version = "1.11.0", features = ["v4"] }
async-trait = "0.1.83"

futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4.4"

salvo = { version = "0.75.0", features = ["serve-static", "oapi", "cors"] }
salvo-oapi = { version = "0.75.0", default-features = false, features = ["chrono", "decimal", "decimal-float", "indexmap"] }
salvo-compression = { version = "0.75.0", default-features = false, features = ["deflate"] }

smallvec = "1.13"
nu-ansi-term = "0.50"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

serde = "1.0"
serde_json = "1.0"
serde_with = "3.9"

prost = "0.13"
prost-build = "0.13"

sqlx = { version = "0.8.2", features = ["chrono", "rust_decimal", "runtime-tokio", ] }
sea-orm = { version = "1.0.1", features = ["sqlx-mysql", "sqlx-sqlite", "macros", "mock", "with-chrono", "debug-print", ] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
lettre = "0.11.9"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 8
panic = 'unwind'
incremental = true
overflow-checks = true

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = true

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
incremental = true
overflow-checks = true
