[package]
name = "application"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
common = { workspace = true }
queue = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
num_cpus = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
rust-embed = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
