[package]
name = "application"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
common = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
num_cpus = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
rust-embed = { workspace = true }
sea-orm = { workspace = true }
smallvec = { workspace = true }
nu-ansi-term = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
