[package]
name = "common"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
lettre = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
[build-dependencies]
prost-build = { workspace = true }
