[package]
name = "queue"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
[dev-dependencies]
tracing-subscriber = { workspace = true }
[build-dependencies]
prost-build = { workspace = true }